# starflight-tlc

./: .clang-format  .git-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: github-actions-linux.yml  github-actions-macos.yml  github-actions-windows.yml
data/: Functions.lua  config.lua  galaxy.xml  galaxy.yaml  globals.lua  human.yaml  playership.lua  quests.lua  strfltitems.yaml
data/encounter/: encounter_barzhon.lua  encounter_coalition.lua  encounter_common.lua  encounter_elowan.lua  encounter_minex.lua  encounter_nyssian.lua  encounter_pirate.lua  encounter_spemin.lua  encounter_tafel.lua  encounter_thrynn.lua
data/planetsurface/: 2.lua  22.lua  26.lua  440.lua  AfrywiogPrison.lua  DereonMine.lua  InitializeOceanic.lua  KelvynCo.lua  MetnebFactory.lua  MilitaryOutpost.lua  PlanetSurfacePlayerShip.lua  PlanetSurfacePlayerTV.lua  PopAcidicPlanet.lua  PopAsteriod.lua  PopFrozenPlanet.lua  PopMoltenPlanet.lua  PopOceanicPlanet.lua  PopRockyPlanet.lua  artifact.lua  basicLifeForm.lua  basicProjectile.lua  mineral.lua  quest_2.lua  quest_22.lua  quest_26.lua  quest_442.lua  quest_AfrywiogPrison.lua  quest_DereonMine.lua  quest_MetnebFactory.lua  quest_MilitaryOutpost.lua  ruin.lua  stunprojectile.lua
data/starmap/: starmap.lua
doc/: design-document.adoc  welcome.adoc
libnoise/: CMakeLists.txt
libnoise/src/win32/: noise.rc
snap/: snapcraft.yaml
snap/gui/: starflight-tlc.desktop
src/: AdvancedTileScroller.cpp  AdvancedTileScroller.h  Archive.cpp  Archive.h  AudioSystem.cpp  AudioSystem.h  Bitmap.cpp  Bitmap.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  CombatObject.cpp  CombatObject.h  Constants.h  DataMgr.cpp  DataMgr.h  DialogButtonPanel.cpp  DialogButtonPanel.h  EventMgr.h  Events.h  Flux.cpp  Flux.h  Game.cpp  Game.h  GameState.cpp  GameState.h  ItemStackButtonList.cpp  ItemStackButtonList.h  Label.cpp  Label.h  Loan.cpp  Loan.h  Math.cpp  MathTL.h  MessageBoxWindow.cpp  MessageBoxWindow.h  ModeMgr.cpp  ModeMgr.h  (+122 more)
src/tinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
